--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body {
     font-family: "Tahoma", sans-serif;
-    background-color: #1153fc;
+    background-color: #fffdfc;
     color: #333;
     margin: 0;
     padding: 0;
-    text-align: center;
+    direction: rtl;
   }
 
   header {
-    background-color: #f9e0dc;
+    background-color: #f8e8e0;
     padding: 20px;
+    text-align: center;
   }
 
   header img {
@@ -22,25 +23,35 @@ body {
     margin: 0;
   }
 
-  p {
-    font-size: 18px;
-    margin-top: 10px;
-  }
-
   main {
-    padding: 30px 10px;
+    padding: 30px 20px;
+    max-width: 900px;
+    margin: auto;
+    line-height: 1.8;
   }
 
-  img.main-photo {
-    width: 90%;
-    max-width: 500px;
+  h2 {
+    color: #b44c4c;
+    margin-top: 40px;
+  }
+
+  ul {
+    list-style: square;
+    padding-right: 20px;
+  }
+
+  .main-photo {
+    display: block;
+    margin: 20px auto;
+    max-width: 90%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
   }
 
   footer {
     background-color: #f0f0f0;
+    text-align: center;
     padding: 15px;
     font-size: 14px;
-    margin-top: 30px;
+    margin-top: 40px;
   }
